--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/logo.png?v=3" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/logo.png?v=3" />
+    <meta name="description" content="Roopa Infrastructure - Crafting your vision into concrete reality" />
     <title>Roopa</title>
   </head>
   <body>
