--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" sizes="32x32" href="/logo.png?v=3" />
     <meta name="description" content="Roopa Infrastructure - Crafting your vision into concrete reality" />
-    <title>Roopa</title>
+    <title>Roopa Infrastructure</title>
   </head>
   <body>
     <div id="root"></div>
