--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" sizes="32x32" href="/logo.png?v=3" />
-    <meta name="description" content="Roopa Infrastructure - Crafting your vision into concrete reality" />
-    <title>Roopa Infrastructure</title>
+    <meta
+      name="description"
+      content="At Roopa Infrastructures, we don’t just construct buildings—we
+                  craft strong foundations for communities, industries, and
+                  futures."
+    />
+    <title>Roopa Infrastructures</title>
   </head>
   <body>
     <div id="root"></div>
