fix: correct HTML structure and improve meta tags in index.html; adjust CSS class properties in Home.jsx

--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/logo.png?v=3" />
+    <title>Roopa Infrastructures | Building Strong Foundations</title>
     <meta
       name="description"
-      content="At Roopa Infrastructures, we don’t just construct buildings—we
-                  craft strong foundations for communities, industries, and
-                  futures."
+      content="At Roopa Infrastructures, we don’t just construct buildings—we craft strong foundations for communities, industries, and futures."
     />
-    <title>Roopa Infrastructures</title>
+    <meta
+      name="keywords"
+      content="construction, infrastructure, building contractors, civil engineering, Roopa Infrastructures"
+    />
+    <meta name="author" content="Roopa Infrastructures" />
+    <link rel="icon" type="image/png" href="/logo.png?v=3" />
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
