feat: enhance SEO with additional meta tags and Open Graph/Twitter Card support; add og-image

--- a/index.html
+++ b/index.html
@@ -3,17 +3,49 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Title -->
     <title>Roopa Infrastructures | Building Strong Foundations</title>
+
+    <!-- Basic SEO -->
     <meta
       name="description"
       content="At Roopa Infrastructures, we don’t just construct buildings—we craft strong foundations for communities, industries, and futures."
     />
     <meta
       name="keywords"
-      content="construction, infrastructure, building contractors, civil engineering, Roopa Infrastructures"
+      content="construction, infrastructure, building contractors, civil engineering, Roopa Infrastructures, Roopa Infrastructure"
     />
     <meta name="author" content="Roopa Infrastructures" />
+
+    <!-- Favicon -->
     <link rel="icon" type="image/png" href="/logo.png?v=3" />
+
+    <!-- ✅ Open Graph (for Google, Facebook, WhatsApp, LinkedIn, etc.) -->
+    <meta property="og:title" content="Roopa Infrastructures | Building Strong Foundations" />
+    <meta
+      property="og:description"
+      content="At Roopa Infrastructures, we don’t just construct buildings—we craft strong foundations for communities, industries, and futures."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.roopainfrastructures.com" />
+    <meta property="og:site_name" content="Roopa Infrastructures" />
+    <meta property="og:image" content="https://www.roopainfrastructures.com/og-image.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
+    <!-- ✅ Twitter Card (for Twitter / X previews) -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@roopainfra" />
+    <meta name="twitter:title" content="Roopa Infrastructures | Building Strong Foundations" />
+    <meta
+      name="twitter:description"
+      content="At Roopa Infrastructures, we don’t just construct buildings—we craft strong foundations for communities, industries, and futures."
+    />
+    <meta name="twitter:image" content="https://www.roopainfrastructures.com/og-image.png" />
+
+    <!-- Optional: for mobile browsers -->
+    <!-- <meta name="theme-color" content="#ffffff" /> -->
   </head>
 
   <body>
